objects/ELV_ServerDeploymentUsage__c/ELV_ServerDeploymentUsage__c.object-meta.xml
<CustomObject>
    <label>Server Deployment Usage</label>
    <nameField>
        <displayFormat>SDU-{00000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Server Deployment Usages</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>