objects/ELV_ServerDeploymentUsage__c/fields/ELV_Account__c.field-meta.xml
<CustomField>
    <fullName>ELV_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>ELV_ServerDeploymentUsages</relationshipName>
    <type>Lookup</type>
</CustomField>