objects/ELV_ServerDeploymentUsage__c/fields/ELV_Amount__c.field-meta.xml
<CustomField>
    <fullName>ELV_Amount__c</fullName>
    <label>Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>