objects/ELV_ServerDeploymentUsage__c/fields/ELV_Entitlement__c.field-meta.xml
<CustomField>
    <fullName>ELV_Entitlement__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Entitlement</label>
    <referenceTo>Ruby__Entitlement__c</referenceTo>
    <relationshipLabel>Server Deployment Usages</relationshipLabel>
    <relationshipName>ELV_ServerDeploymentUsages</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>