objects/ELV_ServerDeploymentUsage__c/fields/ELV_Server_Dep_Usage_Period__c.field-meta.xml
<CustomField>
    <fullName>ELV_Server_Dep_Usage_Period__c</fullName>
    <label>Server Deployment Usage Period</label>
    <referenceTo>ELV_ServerDeploymentUsagePeriod__c</referenceTo>
    <relationshipLabel>Server Deployment Usages</relationshipLabel>
    <relationshipName>ELV_ServerDeploymentUsages</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>